# Loginal

./: .gitignore  README.md  logo_base64.txt  pyproject.toml
loginal/: cli.py  cli_analyze.py
loginal/ai/: gateway.py  prompts.py
loginal/analytics/: __init__.py  timeline.py
loginal/analyze/: __init__.py  url.py
loginal/detect/: anomaly.py  correlation.py  rules.py  sigma_loader.py
loginal/export/: writers.py
loginal/gui/: dashboard.py  icons.py  models.py  services.py  styles.py
loginal/incident/: __init__.py  model.py  store.py
loginal/ingest/: base.py  evtx.py  json_log.py  text.py
loginal/ioc/: __init__.py  cache.py  manager.py  model.py
loginal/ioc/providers/: base.py  virustotal.py
loginal/normalize/: converters.py  schema.py
loginal/query/: engine.py  sql.py
loginal/semantic/: __init__.py  cluster.py  embeddings.py  index.py  store.py
loginal/utils/: patterns.py
loginal/visualize/: tui.py
